# robocorp

./: .gitignore
.github/workflows/: action_server_binary_release.yml  action_server_manylinux_release.yml  log_pytest_release.yml
action_server/build-binary/: pyoxidizer.bzl
action_server/src/robocorp/action_server/: _actions_import.py  _api_copilot.py  _server.py
cli/: tasks.py
cli/cmd/: serve.go
cli/operations/serve/: serve.go
cli/tasks/: tasks.go
log/docs/: changelog.md  robocorp.log.md
log/output-react/src/components/row/components/step/: StepIcon.tsx
log/src/robocorp/log/: _ast_utils.py  _auto_logging_setup.py  _rewrite_ast_add_callbacks.py  _rewrite_importhook.py
log/tests/robocorp_log_tests/: test_rewrite_ast.py  test_rewrite_hook.py
log/tests/robocorp_log_tests/test_integrated/: test_assertion_failed_error.txt
log/tests/robocorp_log_tests/test_rewrite_ast/: test_rewrite_assert.txt
log_pytest/tests/robocorp_log_pytest_tests/test_robocorp_log_pytest_integrated/: test_integrated.txt
planhat/: README.md  pyproject.toml
planhat/src/robocorp/planhat/: __init__.py  _enums.py  planhat.py
tasks/: pyproject.toml
tasks/src/robocorp/tasks/: _argdispatch.py  _commands.py  _protocols.py  _server.py
tools/template_generator/: .gitignore  pyproject.toml  tasks.py
