[tool.poetry]
name = "robocorp-planhat"
version = "0.1.0"
description = "Robocorp Planhat API automation library"
authors = ["Kylie Blake W. <kylieblake@robocorp.com>"]
readme = "README.md"
packages = [{include = "robocorp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
robocorp-tasks = "^1"
tenacity = "^8.2.2"
robocorp-vault = "^0.4.0"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src:tests"
